Upgrade to jena 4.9.0